# Nocturne

./: .gitignore  Cargo.toml  README.md  run.bat
apps/backend/: Cargo.toml
apps/backend/src/: http.rs  main.rs  mapping.rs  playback_errors.rs  test_support.rs  workers.rs
apps/backend/src/http/: tests.rs
apps/backend/src/http/tests/: mod.rs  playback.rs  queue.rs  search.rs  state.rs  youtube_import.rs
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  backend.rs  main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  orchestrator.rs  ports.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/examples/: repro_decode.rs
crates/infrastructure/src/: audio.rs  clock.rs  events.rs  ids.rs  lib.rs  search.rs  settings.rs  yt_dlp.rs
scripts/: dev-tui.ps1
