[workspace]
members = [
    "apps/backend",
    "apps/tui",
    "crates/api",
    "crates/core",
    "crates/domain",
    "crates/infrastructure",
]
default-members = ["apps/backend", "apps/tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
