[package]
name = "nocturne-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
nocturne-api = { path = "../../crates/api" }
nocturne-core = { path = "../../crates/core" }
nocturne-domain = { path = "../../crates/domain" }
nocturne-infrastructure = { path = "../../crates/infrastructure" }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
